<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:text="@string/welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/hint_account" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:passwordToggleEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="18" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:enabled="false"
        android:text="@string/title_activity_login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/action_sign_up"/>

</LinearLayout>