<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:text="@string/welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="11">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/hint_phone_number"
            android:maxLength="11"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_sms_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="6">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_login_sms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_sms_code"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:enabled="false"
            android:maxLength="6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:enabled="false"
        android:text="@string/send_sms_code"/>
</LinearLayout>