<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:background="@drawable/bg_login_title"
                android:text="@string/title_activity_login"
                android:textColor="#FFCC00"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:textColorHint="#c5c5c5"
                app:counterEnabled="true"
                app:counterMaxLength="11">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_bg_login_edit"
                    android:textCursorDrawable="@drawable/bg_login_cursor"
                    android:paddingBottom="2dp"
                    android:textSize="18sp"
                    android:textColor="#2fa881"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_phone_number"
                    android:maxLength="11" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:textColorHint="#c5c5c5"
                app:counterEnabled="true"
                app:counterMaxLength="6">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_sms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_bg_login_edit"
                    android:textCursorDrawable="@drawable/bg_login_cursor"
                    android:paddingBottom="2dp"
                    android:textSize="18sp"
                    android:textColor="#2fa881"
                    android:hint="@string/hint_sms_code"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"
                    android:enabled="false"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/activity_login_login"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_sms_code"
                android:textColor="#d3d3d3"
                android:background="@drawable/bg_login_btn"
                android:stateListAnimator="@anim/state_list_animator_z"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:fabSize="normal"-->
<!--        android:src="@drawable/ic_add_white_24dp"-->
<!--        android:transitionName="loginFab"-->
<!--        android:layout_alignTop="@id/cv"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_alignEnd="@id/cv"-->
<!--        android:layout_marginEnd="-20dp"/>-->

</FrameLayout>
